src/kernel/test/wlr/wayland.jl

# Automatically generated using Clang.jl


# Skipping MacroDefinition: wl_client_for_each ( client , list ) for ( client = wl_client_from_link ( ( list ) -> next ) ; wl_client_get_link ( client ) != ( list ) ; client = wl_client_from_link ( wl_client_get_link ( client ) -> next ) )
# Skipping MacroDefinition: wl_resource_for_each ( resource , list ) for ( resource = 0 , resource = wl_resource_from_link ( ( list ) -> next ) ; wl_resource_get_link ( resource ) != ( list ) ; resource = wl_resource_from_link ( wl_resource_get_link ( resource ) -> next ) )
# Skipping MacroDefinition: wl_resource_for_each_safe ( resource , tmp , list ) for ( resource = 0 , tmp = 0 , resource = wl_resource_from_link ( ( list ) -> next ) , tmp = wl_resource_from_link ( ( list ) -> next -> next ) ; wl_resource_get_link ( resource ) != ( list ) ; resource = tmp , tmp = wl_resource_from_link ( wl_resource_get_link ( resource ) -> next ) )

using CEnum
const wl_event_loop_fd_func_t = Ptr{Cvoid}
const wl_event_loop_timer_func_t = Ptr{Cvoid}
const wl_event_loop_signal_func_t = Ptr{Cvoid}
const wl_event_loop_idle_func_t = Ptr{Cvoid}
const wl_event_loop = Cvoid
const wl_event_source = Cvoid

struct wl_list
    prev::Ptr{wl_list}
    next::Ptr{wl_list}
end

const wl_notify_func_t = Ptr{Cvoid}

struct wl_listener
    link::wl_list
    notify::wl_notify_func_t
end

const wl_display = Cvoid
const wl_client = Cvoid
const wl_global_bind_func_t = Ptr{Cvoid}
const wl_global = Cvoid
const wl_display_global_filter_func_t = Ptr{Cvoid}

abstract type Abstract_wl_interface end
struct wl_message{wl_interface<:Abstract_wl_interface}
    name::Cstring
    signature::Cstring
    types::Ptr{Ptr{wl_interface}}
end

struct wl_interface <: Abstract_wl_interface
    name::Cstring
    version::Cint
    method_count::Cint
    methods::Ptr{wl_message}
    event_count::Cint
    events::Ptr{wl_message}
end

struct wl_object
    interface::Ptr{wl_interface}
    implementation::Ptr{Cvoid}
    id::UInt32
end

const wl_resource_destroy_func_t = Ptr{Cvoid}

struct wl_signal
    listener_list::wl_list
end

struct wl_resource
    object::wl_object
    destroy::wl_resource_destroy_func_t
    link::wl_list
    destroy_signal::wl_signal
    client::Ptr{wl_client}
    data::Ptr{Cvoid}
end

const wl_client_for_each_resource_iterator_func_t = Ptr{Cvoid}
const wl_shm_buffer = Cvoid
const wl_shm_pool = Cvoid

@cenum wl_protocol_logger_type::UInt32 begin
    WL_PROTOCOL_LOGGER_REQUEST = 0
    WL_PROTOCOL_LOGGER_EVENT = 1
end


struct wl_argument
    s::Cstring
end

struct wl_protocol_logger_message
    resource::Ptr{wl_resource}
    message_opcode::Cint
    message::Ptr{wl_message}
    arguments_count::Cint
    arguments::Ptr{wl_argument}
end

const wl_protocol_logger_func_t = Ptr{Cvoid}
const wl_protocol_logger = Cvoid
const wl_proxy = Cvoid
const wl_event_queue = Cvoid
const WL_DISPLAY_SYNC = 0
const WL_DISPLAY_GET_REGISTRY = 1
const WL_DISPLAY_ERROR_SINCE_VERSION = 1
const WL_DISPLAY_DELETE_ID_SINCE_VERSION = 1
const WL_DISPLAY_SYNC_SINCE_VERSION = 1
const WL_DISPLAY_GET_REGISTRY_SINCE_VERSION = 1
const WL_REGISTRY_BIND = 0
const WL_REGISTRY_GLOBAL_SINCE_VERSION = 1
const WL_REGISTRY_GLOBAL_REMOVE_SINCE_VERSION = 1
const WL_REGISTRY_BIND_SINCE_VERSION = 1
const WL_CALLBACK_DONE_SINCE_VERSION = 1
const WL_COMPOSITOR_CREATE_SURFACE = 0
const WL_COMPOSITOR_CREATE_REGION = 1
const WL_COMPOSITOR_CREATE_SURFACE_SINCE_VERSION = 1
const WL_COMPOSITOR_CREATE_REGION_SINCE_VERSION = 1
const WL_SHM_POOL_CREATE_BUFFER = 0
const WL_SHM_POOL_DESTROY = 1
const WL_SHM_POOL_RESIZE = 2
const WL_SHM_POOL_CREATE_BUFFER_SINCE_VERSION = 1
const WL_SHM_POOL_DESTROY_SINCE_VERSION = 1
const WL_SHM_POOL_RESIZE_SINCE_VERSION = 1
const WL_SHM_CREATE_POOL = 0
const WL_SHM_FORMAT_SINCE_VERSION = 1
const WL_SHM_CREATE_POOL_SINCE_VERSION = 1
const WL_BUFFER_DESTROY = 0
const WL_BUFFER_RELEASE_SINCE_VERSION = 1
const WL_BUFFER_DESTROY_SINCE_VERSION = 1
const WL_DATA_OFFER_ACCEPT = 0
const WL_DATA_OFFER_RECEIVE = 1
const WL_DATA_OFFER_DESTROY = 2
const WL_DATA_OFFER_FINISH = 3
const WL_DATA_OFFER_SET_ACTIONS = 4
const WL_DATA_OFFER_OFFER_SINCE_VERSION = 1
const WL_DATA_OFFER_SOURCE_ACTIONS_SINCE_VERSION = 3
const WL_DATA_OFFER_ACTION_SINCE_VERSION = 3
const WL_DATA_OFFER_ACCEPT_SINCE_VERSION = 1
const WL_DATA_OFFER_RECEIVE_SINCE_VERSION = 1
const WL_DATA_OFFER_DESTROY_SINCE_VERSION = 1
const WL_DATA_OFFER_FINISH_SINCE_VERSION = 3
const WL_DATA_OFFER_SET_ACTIONS_SINCE_VERSION = 3
const WL_DATA_SOURCE_OFFER = 0
const WL_DATA_SOURCE_DESTROY = 1
const WL_DATA_SOURCE_SET_ACTIONS = 2
const WL_DATA_SOURCE_TARGET_SINCE_VERSION = 1
const WL_DATA_SOURCE_SEND_SINCE_VERSION = 1
const WL_DATA_SOURCE_CANCELLED_SINCE_VERSION = 1
const WL_DATA_SOURCE_DND_DROP_PERFORMED_SINCE_VERSION = 3
const WL_DATA_SOURCE_DND_FINISHED_SINCE_VERSION = 3
const WL_DATA_SOURCE_ACTION_SINCE_VERSION = 3
const WL_DATA_SOURCE_OFFER_SINCE_VERSION = 1
const WL_DATA_SOURCE_DESTROY_SINCE_VERSION = 1
const WL_DATA_SOURCE_SET_ACTIONS_SINCE_VERSION = 3
const WL_DATA_DEVICE_START_DRAG = 0
const WL_DATA_DEVICE_SET_SELECTION = 1
const WL_DATA_DEVICE_RELEASE = 2
const WL_DATA_DEVICE_DATA_OFFER_SINCE_VERSION = 1
const WL_DATA_DEVICE_ENTER_SINCE_VERSION = 1
const WL_DATA_DEVICE_LEAVE_SINCE_VERSION = 1
const WL_DATA_DEVICE_MOTION_SINCE_VERSION = 1
const WL_DATA_DEVICE_DROP_SINCE_VERSION = 1
const WL_DATA_DEVICE_SELECTION_SINCE_VERSION = 1
const WL_DATA_DEVICE_START_DRAG_SINCE_VERSION = 1
const WL_DATA_DEVICE_SET_SELECTION_SINCE_VERSION = 1
const WL_DATA_DEVICE_RELEASE_SINCE_VERSION = 2
const WL_DATA_DEVICE_MANAGER_CREATE_DATA_SOURCE = 0
const WL_DATA_DEVICE_MANAGER_GET_DATA_DEVICE = 1
const WL_DATA_DEVICE_MANAGER_CREATE_DATA_SOURCE_SINCE_VERSION = 1
const WL_DATA_DEVICE_MANAGER_GET_DATA_DEVICE_SINCE_VERSION = 1
const WL_SHELL_GET_SHELL_SURFACE = 0
const WL_SHELL_GET_SHELL_SURFACE_SINCE_VERSION = 1
const WL_SHELL_SURFACE_PONG = 0
const WL_SHELL_SURFACE_MOVE = 1
const WL_SHELL_SURFACE_RESIZE = 2
const WL_SHELL_SURFACE_SET_TOPLEVEL = 3
const WL_SHELL_SURFACE_SET_TRANSIENT = 4
const WL_SHELL_SURFACE_SET_FULLSCREEN = 5
const WL_SHELL_SURFACE_SET_POPUP = 6
const WL_SHELL_SURFACE_SET_MAXIMIZED = 7
const WL_SHELL_SURFACE_SET_TITLE = 8
const WL_SHELL_SURFACE_SET_CLASS = 9
const WL_SHELL_SURFACE_PING_SINCE_VERSION = 1
const WL_SHELL_SURFACE_CONFIGURE_SINCE_VERSION = 1
const WL_SHELL_SURFACE_POPUP_DONE_SINCE_VERSION = 1
const WL_SHELL_SURFACE_PONG_SINCE_VERSION = 1
const WL_SHELL_SURFACE_MOVE_SINCE_VERSION = 1
const WL_SHELL_SURFACE_RESIZE_SINCE_VERSION = 1
const WL_SHELL_SURFACE_SET_TOPLEVEL_SINCE_VERSION = 1
const WL_SHELL_SURFACE_SET_TRANSIENT_SINCE_VERSION = 1
const WL_SHELL_SURFACE_SET_FULLSCREEN_SINCE_VERSION = 1
const WL_SHELL_SURFACE_SET_POPUP_SINCE_VERSION = 1
const WL_SHELL_SURFACE_SET_MAXIMIZED_SINCE_VERSION = 1
const WL_SHELL_SURFACE_SET_TITLE_SINCE_VERSION = 1
const WL_SHELL_SURFACE_SET_CLASS_SINCE_VERSION = 1
const WL_SURFACE_DESTROY = 0
const WL_SURFACE_ATTACH = 1
const WL_SURFACE_DAMAGE = 2
const WL_SURFACE_FRAME = 3
const WL_SURFACE_SET_OPAQUE_REGION = 4
const WL_SURFACE_SET_INPUT_REGION = 5
const WL_SURFACE_COMMIT = 6
const WL_SURFACE_SET_BUFFER_TRANSFORM = 7
const WL_SURFACE_SET_BUFFER_SCALE = 8
const WL_SURFACE_DAMAGE_BUFFER = 9
const WL_SURFACE_ENTER_SINCE_VERSION = 1
const WL_SURFACE_LEAVE_SINCE_VERSION = 1
const WL_SURFACE_DESTROY_SINCE_VERSION = 1
const WL_SURFACE_ATTACH_SINCE_VERSION = 1
const WL_SURFACE_DAMAGE_SINCE_VERSION = 1
const WL_SURFACE_FRAME_SINCE_VERSION = 1
const WL_SURFACE_SET_OPAQUE_REGION_SINCE_VERSION = 1
const WL_SURFACE_SET_INPUT_REGION_SINCE_VERSION = 1
const WL_SURFACE_COMMIT_SINCE_VERSION = 1
const WL_SURFACE_SET_BUFFER_TRANSFORM_SINCE_VERSION = 2
const WL_SURFACE_SET_BUFFER_SCALE_SINCE_VERSION = 3
const WL_SURFACE_DAMAGE_BUFFER_SINCE_VERSION = 4
const WL_SEAT_GET_POINTER = 0
const WL_SEAT_GET_KEYBOARD = 1
const WL_SEAT_GET_TOUCH = 2
const WL_SEAT_RELEASE = 3
const WL_SEAT_CAPABILITIES_SINCE_VERSION = 1
const WL_SEAT_NAME_SINCE_VERSION = 2
const WL_SEAT_GET_POINTER_SINCE_VERSION = 1
const WL_SEAT_GET_KEYBOARD_SINCE_VERSION = 1
const WL_SEAT_GET_TOUCH_SINCE_VERSION = 1
const WL_SEAT_RELEASE_SINCE_VERSION = 5
const WL_POINTER_AXIS_SOURCE_WHEEL_TILT_SINCE_VERSION = 6
const WL_POINTER_SET_CURSOR = 0
const WL_POINTER_RELEASE = 1
const WL_POINTER_ENTER_SINCE_VERSION = 1
const WL_POINTER_LEAVE_SINCE_VERSION = 1
const WL_POINTER_MOTION_SINCE_VERSION = 1
const WL_POINTER_BUTTON_SINCE_VERSION = 1
const WL_POINTER_AXIS_SINCE_VERSION = 1
const WL_POINTER_FRAME_SINCE_VERSION = 5
const WL_POINTER_AXIS_SOURCE_SINCE_VERSION = 5
const WL_POINTER_AXIS_STOP_SINCE_VERSION = 5
const WL_POINTER_AXIS_DISCRETE_SINCE_VERSION = 5
const WL_POINTER_SET_CURSOR_SINCE_VERSION = 1
const WL_POINTER_RELEASE_SINCE_VERSION = 3
const WL_KEYBOARD_RELEASE = 0
const WL_KEYBOARD_KEYMAP_SINCE_VERSION = 1
const WL_KEYBOARD_ENTER_SINCE_VERSION = 1
const WL_KEYBOARD_LEAVE_SINCE_VERSION = 1
const WL_KEYBOARD_KEY_SINCE_VERSION = 1
const WL_KEYBOARD_MODIFIERS_SINCE_VERSION = 1
const WL_KEYBOARD_REPEAT_INFO_SINCE_VERSION = 4
const WL_KEYBOARD_RELEASE_SINCE_VERSION = 3
const WL_TOUCH_RELEASE = 0
const WL_TOUCH_DOWN_SINCE_VERSION = 1
const WL_TOUCH_UP_SINCE_VERSION = 1
const WL_TOUCH_MOTION_SINCE_VERSION = 1
const WL_TOUCH_FRAME_SINCE_VERSION = 1
const WL_TOUCH_CANCEL_SINCE_VERSION = 1
const WL_TOUCH_SHAPE_SINCE_VERSION = 6
const WL_TOUCH_ORIENTATION_SINCE_VERSION = 6
const WL_TOUCH_RELEASE_SINCE_VERSION = 3
const WL_OUTPUT_RELEASE = 0
const WL_OUTPUT_GEOMETRY_SINCE_VERSION = 1
const WL_OUTPUT_MODE_SINCE_VERSION = 1
const WL_OUTPUT_DONE_SINCE_VERSION = 2
const WL_OUTPUT_SCALE_SINCE_VERSION = 2
const WL_OUTPUT_RELEASE_SINCE_VERSION = 3
const WL_REGION_DESTROY = 0
const WL_REGION_ADD = 1
const WL_REGION_SUBTRACT = 2
const WL_REGION_DESTROY_SINCE_VERSION = 1
const WL_REGION_ADD_SINCE_VERSION = 1
const WL_REGION_SUBTRACT_SINCE_VERSION = 1
const WL_SUBCOMPOSITOR_DESTROY = 0
const WL_SUBCOMPOSITOR_GET_SUBSURFACE = 1
const WL_SUBCOMPOSITOR_DESTROY_SINCE_VERSION = 1
const WL_SUBCOMPOSITOR_GET_SUBSURFACE_SINCE_VERSION = 1
const WL_SUBSURFACE_DESTROY = 0
const WL_SUBSURFACE_SET_POSITION = 1
const WL_SUBSURFACE_PLACE_ABOVE = 2
const WL_SUBSURFACE_PLACE_BELOW = 3
const WL_SUBSURFACE_SET_SYNC = 4
const WL_SUBSURFACE_SET_DESYNC = 5
const WL_SUBSURFACE_DESTROY_SINCE_VERSION = 1
const WL_SUBSURFACE_SET_POSITION_SINCE_VERSION = 1
const WL_SUBSURFACE_PLACE_ABOVE_SINCE_VERSION = 1
const WL_SUBSURFACE_PLACE_BELOW_SINCE_VERSION = 1
const WL_SUBSURFACE_SET_SYNC_SINCE_VERSION = 1
const WL_SUBSURFACE_SET_DESYNC_SINCE_VERSION = 1
const wl_buffer = Cvoid
const wl_callback = Cvoid
const wl_compositor = Cvoid
const wl_data_device = Cvoid
const wl_data_device_manager = Cvoid
const wl_data_offer = Cvoid
const wl_data_source = Cvoid
const wl_keyboard = Cvoid
const wl_output = Cvoid
const wl_pointer = Cvoid
const wl_region = Cvoid
const wl_registry = Cvoid
const wl_seat = Cvoid
const wl_shell = Cvoid
const wl_shell_surface = Cvoid
const wl_shm = Cvoid
const wl_subcompositor = Cvoid
const wl_subsurface = Cvoid
const wl_surface = Cvoid
const wl_touch = Cvoid

@cenum wl_display_error::UInt32 begin
    WL_DISPLAY_ERROR_INVALID_OBJECT = 0
    WL_DISPLAY_ERROR_INVALID_METHOD = 1
    WL_DISPLAY_ERROR_NO_MEMORY = 2
    WL_DISPLAY_ERROR_IMPLEMENTATION = 3
end


struct wl_display_listener
    error::Ptr{Cvoid}
    delete_id::Ptr{Cvoid}
end

struct wl_registry_listener
    _global::Ptr{Cvoid}
    global_remove::Ptr{Cvoid}
end

struct wl_callback_listener
    done::Ptr{Cvoid}
end

@cenum wl_shm_error::UInt32 begin
    WL_SHM_ERROR_INVALID_FORMAT = 0
    WL_SHM_ERROR_INVALID_STRIDE = 1
    WL_SHM_ERROR_INVALID_FD = 2
end
